--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable( SelfDrivingCar main.cpp
         dataStructures/Segmentation.h
         dataStructures/Segmentation.cpp
         dataStructures/ColumnSegment.h
-        dataStructures/RowCol.h)
+        dataStructures/RowCol.h dataStructures/Line.cpp dataStructures/Line.h)
 
 target_link_libraries( SelfDrivingCar ${OpenCV_LIBS} )
 target_link_libraries( SelfDrivingCar ${CMAKE_THREAD_LIBS_INIT} )
