--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required( VERSION 3.14 )
 set( CMAKE_CXX_STANDARD 14 )
 
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
+set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
 project( SelfDrivingCar )
 find_package( OpenCV REQUIRED )
